[package]
name = "paardit-server"
version = "0.1.0"
authors = ["Taaniel Teiss <taaniel.teiss@futurice.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres"] }
